--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "angular-calendar": "^0.28.2",
+    "angularx-flatpickr": "^6.3.0",
+    "date-fns": "^2.10.0",
+    "flatpickr": "^4.6.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
