--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/router": "~9.0.2",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "angular-calendar": "^0.28.2",
+    "angular-popper": "^2.0.1",
     "angularx-flatpickr": "^6.3.0",
     "bootstrap": "^4.4.1",
     "date-fns": "^2.10.0",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.3.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "tslib": "^1.10.0",
@@ -38,11 +40,11 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
