--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@auth0/auth0-spa-js": "^1.6.4",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "angular-calendar": "^0.28.2",
     "angular-popper": "^2.0.1",
     "angularx-flatpickr": "^6.3.0",
+    "auth0-js": "^9.12.2",
     "bootstrap": "^4.4.1",
     "date-fns": "^2.10.0",
     "flatpickr": "^4.6.3",
@@ -39,6 +42,7 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
+    "@types/auth0-js": "^9.12.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
